--- a/app/src/main/res/layout/fragment_subcategory.xml
+++ b/app/src/main/res/layout/fragment_subcategory.xml
@@ -33,6 +33,7 @@
         android:layout_margin="2dp"/>
 
     <ImageView
+        android:visibility="gone"
         android:layout_marginTop="14dp"
         android:layout_gravity="center_horizontal"
         android:id="@+id/categoryImage"
